<resources>
    <string name="app_name">Registro_uaa</string>

    <string name="nombre_desarrollador">Desarrollado por alumnos de ISC</string>
    <string name="Btn_ir_registros">Registrarme</string>

    <string name="Btn_ir_logueo">Ingresar</string>
    <string name="R_Et_nombre_usuario">Nombre de Usuario</string>
    <string name="R_Et_email">Correo electrónico</string>
    <string name="R_Et_password">Contraseña</string>
    <string name="R_Et_r_password">Repita su contraseña</string>
    <string name="Btn_registrar">Registrar</string>

    <string name="menu_salir">Cerrar sesión</string>
    <string name="L_Et_email">Correo electrónico</string>
    <string name="L_Et_password">Contraseña</string>
    <string name="Btn_login">Ingresar</string>

    <string name="open">Abrir menú</string>
    <string name="close">Cerrar menú</string>

</resources>